# cargo-features = ["per-package-target"]

[package]
name = "murex-2024"
version = "0.1.0"
edition = "2021"
description = "High performance ROV control software for MATE-ROV competition."
license = "MIT"
authors = ["Altan Ünver, Ph.D.", "Byran Huang, Ph.D.", "Chaney Hollis", "Ethan Cheng", "Celine Zhang"]
# forced-target = "armv7-unknown-linux-musleabihf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "aquatic"
path = "src/main.rs"

[lib]
name = "aquatic"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
embedded-hal = "0.2.7"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
linux-embedded-hal = "0.3.2"
log = "0.4.20"
rppal = "0.14.1"
text_io = "0.1.12"
tokio = { version = "1.32.0", features = ["full"] }

# ms5837 = { path = "../drivers/ms5837", optional = false }
# bme680 = { path = "../drivers/bme680", optional = true }
# bmi088 = { path = "../drivers/bmi088", optional = true }
# pca9685 = { path = "../drivers/pca9685", optional = true }


[features]
default = [] # No features enabled by default
# bme680_driver = ["bme680"]
# bmi088_driver = ["bmi088"]
# pca9685_driver = ["pca9685"]

[dev-dependencies]
flamegraph = "0.6.2"
# Tune build parameters in future
# [profile.dev]
# [profile.release]
# strip = true
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"