# cargo-features = ["per-package-target"]

[package]
name = "murex-2024"
version = "0.1.0"
edition = "2021"
description = "High performance ROV control software for MATE-ROV competition."
license = "MIT"
authors = ["Altan Ünver, Ph.D.", "Byran Huang, Ph.D.", "Chaney Hollis", "Ethan Cheng", "Celine Zhang"]
# forced-target = "armv7-unknown-linux-musleabihf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "aquatic"
path = "src/main.rs"

[dependencies]
pid = "4.0.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
text_io = "0.1.12"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"
rppal = "0.15.0"
lis3mdl-driver = "0.1.0"
bme680 = "0.6.0"
shared-bus = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ahrs = "0.6.0"
nalgebra = "^0.31"
ms5837 = "0.2.1"
pmw3901 = "1.0.0"

# https://users.rust-lang.org/t/cross-compiling-from-macos-to-arm/56060/6


# ms5837 = { path = "../drivers/ms5837", optional = false }
# bme680 = { path = "../drivers/bme680", optional = true }
# bmi088 = { path = "../drivers/bmi088", optional = true }
# pca9685 = { path = "../drivers/pca9685", optional = true }


[features]
default = [] # No features enabled by default
# bme680_driver = ["bme680"]
# bmi088_driver = ["bmi088"]
# pca9685_driver = ["pca9685"]

[dev-dependencies]
flamegraph = "0.6.2"
# Tune build parameters in future
# [profile.dev]
# [profile.release]
# strip = true
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"